--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,46 +1,11 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Launch Lexer",
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
-            "cwd": "${workspaceFolder}/src/tooling/lexer",
-            "program": "${workspaceFolder}/src/tooling/lexer/src/main.ts",
-            "preLaunchTask": "npm: build - src/Tooling/lexer",
-            "outFiles": ["${workspaceFolder}/src/tooling/lexer/dist/**/*.js"],
-            "sourceMaps": true
-        },
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Launch Parser",
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
-            "cwd": "${workspaceFolder}/src/tooling/parser",
-            "program": "${workspaceFolder}/src/tooling/parser/src/main.ts",
-            "preLaunchTask": "npm: build - src/Tooling/parser",
-            "outFiles": ["${workspaceFolder}/src/tooling/parser/dist/**/*.js"],
-            "sourceMaps": true
-        },
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Debug Current Test File",
-            "autoAttachChildProcesses": true,
-            "skipFiles": ["<node_internals>/**", "**/node_modules/**"],
-            "program": "${workspaceRoot}/src/TextEditor/wd-text-editor/node_modules/vitest/vitest.mjs",
-            "args": ["run", "${relativeFile}"],
-            "smartStep": true,
-            "console": "integratedTerminal"
-        }
-        
-    ]
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "command": "./node_modules/.bin/astro dev",
+      "name": "Development server",
+      "request": "launch",
+      "type": "node-terminal"
+    }
+  ]
 }
